--- a/package.json
+++ b/package.json
@@ -12,7 +12,16 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.0.0",
+    "eslint-plugin-react": "^7.24.0",
     "postcss": "^8.3.5",
+    "prettier": "^2.3.2",
+    "prettier-plugin-tailwind": "^2.2.12",
     "tailwindcss": "^2.2.4"
   }
 }
